Use TraceSourceID as uuid internally to ApiClarity
