# backend/pkg/rest/control_controller.go
@@ -22,7 +22,6 @@ import (
 	"strconv"
 
 	"github.com/go-openapi/runtime/middleware"
-	"github.com/google/uuid"
 	log "github.com/sirupsen/logrus"
 
 	"github.com/openclarity/apiclarity/api/server/models"
@@ -30,6 +29,7 @@ import (
 	"github.com/openclarity/apiclarity/api3/notifications"
 	"github.com/openclarity/apiclarity/backend/pkg/common"
 	_database "github.com/openclarity/apiclarity/backend/pkg/database"
+	"github.com/openclarity/apiclarity/backend/pkg/utils"
 )
 
 func (s *Server) PostControlNewDiscoveredAPIs(params operations.PostControlNewDiscoveredAPIsParams) middleware.Responder {
@@ -48,9 +48,9 @@ func (s *Server) PostControlNewDiscoveredAPIs(params operations.PostControlNewDi
 }
 
 func (s *Server) CreateNewDiscoveredAPIs(ctx context.Context, hosts []string, traceSource *models.TraceSource) error {
-	traceSourceID := common.DefaultTraceSourceID
+	traceSourceID := common.DefaultTraceSourceUID
 	if traceSource != nil {
-		traceSourceID = uint(traceSource.ID)
+		traceSourceID = utils.ConvertStrfmtUUIDToGoogleUUID(traceSource.UID)
 	}
 	// Iterate over each hosts and check if it already exists
 	for _, h := range hosts {
@@ -79,18 +79,10 @@ func (s *Server) CreateNewDiscoveredAPIs(ctx context.Context, hosts []string, tr
 		}
 		if created {
 			log.Infof("New API '%s' managed by source '%v' was added to inventory", h, apiInfo.TraceSourceID)
-			_ = s.speculators.Get(apiInfo.TraceSourceID).InitSpec(host, strconv.Itoa(port))
+			_ = s.speculators.Get(apiInfo.TraceSource.ID).InitSpec(host, strconv.Itoa(port))
 
 			// Get
 			if s.notifier != nil {
-				traceSource, err := s.dbHandler.TraceSourcesTable().GetTraceSource(apiInfo.TraceSourceID)
-				if err != nil {
-					log.Errorf("Failed to get Trace Source: %v", err)
-				}
-				var traceSourceExternalID uuid.UUID
-				if err := traceSourceExternalID.UnmarshalText([]byte(traceSource.ExternalID)); err != nil {
-					log.Errorf("Can't read external ID as UUID: %v", err)
-				}
 
 				apiID := uint32(apiInfo.ID)
 				port := int(apiInfo.Port)
@@ -101,7 +93,7 @@ func (s *Server) CreateNewDiscoveredAPIs(ctx context.Context, hosts []string, tr
 					HasReconstructedSpec: &apiInfo.HasReconstructedSpec,
 					HasProvidedSpec:      &apiInfo.HasProvidedSpec,
 					DestinationNamespace: &apiInfo.DestinationNamespace,
-					ExternalSourceID:     traceSourceExternalID,
+					TraceSourceId:        &apiInfo.TraceSourceID,
 				}
 				notification := notifications.APIClarityNotification{}
 				err = notification.FromNewDiscoveredAPINotification(newDiscoveredAPINotification)
